--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <body>
   <div>
-    <p>Hello Tim is fat?</p>
+    <p>Hello Tim is very fat</p>
+    <ul>
+      <li>Because he eats too much</li>
+      <li>He eats dogs</li>
+    </ul>
   </div>
 </body>
