--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <body>
   <div>
+    <a href="https://www.tkutcher.com">
+      <img src="images/timmy.jpg" alt="Timmeh"></img>
+    </a>
+
     <p>Hello Tim is very fat</p>
     <ul>
       <li>Because he eats too much</li>
